# py-webrtcrnnvad

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: conda.yml  pip.yml  publish-to-pypi.yml  wheels.yml
py_webrtcrnnvad/: __init__.py  example.py
src/: CMakeLists.txt  denoise.cpp  main.cpp  nnet.cpp  nnet.h  nnet_data.c  nnet_data.cpp  nnet_data.h  rnn.cpp  rnnoise.h
tests/: test_basic.py
